--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 video_conversion_script:
 
-A shell script that utilises ffmpeg and ffmpeg2theora to simplify the
-video conversion process.
+A shell script that utilises ffmpeg to simplify video conversion process.
 
 The conversion matrix used was based on:
 
